부동산 게시물 추가 페이지 구현

--- a/03.KHdaangn/src/main/webapp/resources/css/common.css
+++ b/03.KHdaangn/src/main/webapp/resources/css/common.css
@@ -40,3 +40,7 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 /* posts */
 .posts {display:flex; justify-content: space-between;}
 .posts .posts-img > img {display: block; width: 80px; height: 80px; float: left; }
+
+.main-wrap .add-h3 {float:left;}
+.main-wrap .choice-gray {color: gray;}
+.main-wrap .add-gray {color: gray;}
