--- a/03.KHdaangn/src/main/webapp/resources/css/common.css
+++ b/03.KHdaangn/src/main/webapp/resources/css/common.css
@@ -24,13 +24,16 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .nav .nav-btn {width: 135px;}
 
 /* footer */
-.footer-wrap {border-top: 1px solid; border-color: #eaebee; max-width: 1600px; text-align: center;}
+.footer-wrap {border-top: 1px solid; border-color: #eaebee; max-width: 1600px; text-align: center; line-height: 1.7;}
 .footer-wrap .footer-section {display: flex; margin: 0 auto; padding: 50px 0; justify-content: center;}
-.footer-wrap .footer-section > ul {display: flex; list-style: none; width: 33%; flex-direction: column;}
-.footer-wrap .footer-section > li {}
-.footer-wrap .footer-section .footer-section-left {}
+.footer-wrap .footer-section .footer-section-left {width: 25%;}
+.footer-wrap .footer-section .footer-section-left > ul {width: 33%; float: left; display: flex; flex-direction: column; list-style: none;}
+.footer-wrap .footer-section .footer-section-left > li {margin: 10px;}
 .footer-wrap .footer-section .footer-section-right {width: 33%;}
-.footer-wrap .footer-info {border-top: 1px solid; border-color: #eaebee; max-width: 1600px;}
+.footer-wrap .footer-info {border-top: 1px solid; border-color: #eaebee; max-width: 1600px; padding: 50px 0;}
+
+.footer-info .footer-info-right {display: flex; justify-content: center;}
+.footer-info .footer-select {margin-left: 10px;}
 
 /* main */
 .main-wrap {align-items: center;}
@@ -45,7 +48,7 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 	.post-wrap {margin: 0 auto;}
 	
 }
-
+ 
 /* posts */
 .posts {display:flex; justify-content: space-between;}
 .posts .posts-img > img {display: block; width: 80px; height: 80px; float: left; }
