--- a/03.KHdaangn/src/main/webapp/resources/css/common.css
+++ b/03.KHdaangn/src/main/webapp/resources/css/common.css
@@ -39,7 +39,8 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .footer-info .footer-select {margin-left: 10px;}
 
 /* index */
-.main-wrap {margin-top: 7.3rem; align-items: center;}
+.main-wrap {width: 980px; margin: 7.3rem auto 0; align-items: center;}
+.main-wrap .main-title > h1 {font-size: 34px; font-weight: 800; text-align: center; margin-bottom: 40px;}
 .main-wrap .main-content:first-child {position: relative; display: flex; padding-top: 24px; background-color: #FBF7F2;}
 .main-wrap .main-content:nth-child(2) {display: flex; padding: 6rem 0;}
 .main-wrap .main-content:nth-child(3) {display: flex; padding: 6rem 0; background-color: #E6F3E6;}
@@ -61,10 +62,19 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 	.post-wrap {margin: 0 auto;}
 	
 }
+
+/* hot_articles */
+.article-wrap {}
+.article-posts {}
+
+.main-wrap .article-top {width: 980px; display: flex;}
+.main-wrap .selector {float: right; display: flex;}
  
 /* posts */
 .posts {display:flex; justify-content: space-between;}
 .posts .posts-img > img {display: block; width: 80px; height: 80px; float: left; }
+.post-btn {float:right;}
+.post-btn2 {float:left;}
 
 .main-wrap .add-h3 {float:left;}
 .main-wrap .choice-gray {color: gray;}
