알바 게시판 상단 부분 레이아웃 및 css 수정

--- a/03.KHdaangn/src/main/webapp/resources/css/common.css
+++ b/03.KHdaangn/src/main/webapp/resources/css/common.css
@@ -26,6 +26,7 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .nav .search-bar > input {width: 30rem;}
 .nav .nav-btn {width: 135px; display: flex;}
 
+
 /* footer */
 .footer-wrap {border-top: 1px solid; border-color: #eaebee; max-width: 1600px; text-align: center; line-height: 1.7;}
 .footer-wrap .footer-section {display: flex; margin: 0 auto; padding: 50px 0; justify-content: center;}
@@ -70,20 +71,33 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .article-bottom {padding: 80px 0; text-align: center; background-color: #f8f9fa;} 
  
  
- /* jobs & realty */
- .main-wrap .main-top {display: flex; background: #ffe2d2;}
- .main-wrap .main-top .main-text {width: 980px; margin: 0 auto; padding: 3rem 1rem 0;}
- .main-wrap .main-top .main-text > h1 {}
- .main-wrap .main-top .main-text > p {}
- .main-wrap .main-top .main-img > img {width: 200px;}
- 
- 
+/* jobs & realty */
+.main-top-wrap {height: 30rem; background: #ffe2d2;}
+.main-top-wrap .main-top {width: 980px; display: flex;}
+.main-top-wrap .main-top .main-text {width: 700px; margin: 0 auto; padding: 5rem 1rem 0;}
+.main-top-wrap .main-top .main-text > h1 {font-size: 34px; font-weight: 800; margin-bottom: 15px;}
+.main-top-wrap .main-top .main-text > p {font-size: 18px;}
+.main-top-wrap .main-top .main-img > img {width: 567px; position: absolute; transform: translateX(-525px) translateY(55px);}
+
+.main-wrap .post-wrap .post-top-wrap {width: 780px; margin: 0 auto;}
+.main-wrap .post-wrap .post-top-wrap {display: flex; align-items: center;}
+.main-wrap .post-wrap .post-top-wrap > h2 {font-size: 2.8rem; margin: 3.75rem 54rem 2.5rem 0;}
+
+
+
+.karrot-app {cursor: pointer; width: 770px; margin: 0 auto; display: flex; align-items: center; border-radius: 10px; background-color: #ff6f0f24}
+.karrot-app .app-left > img {width: 5.5rem; margin: 0 4rem;}
+.karrot-app .app-mid {margin: 3rem 24rem 3rem 0; font-size: 2rem; font-weight: 700;}
+.karrot-app .app-right {padding: 1rem 1rem; margin-right: 1rem; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 10px; background-color: #ff6f0f;}
  
 /* posts */
 .posts {display:flex; justify-content: space-between;}
 .posts .posts-img > img {display: block; width: 80px; height: 80px; float: left; }
-.post-btn {float:right;}
+.post-btn {float:right; margin-top: 2.2rem;}
+.post-btn > button {cursor: pointer; padding: 0.7rem 1rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff6f0f;}
+.post-btn > button:hover {cursor: pointer; padding: 0.7rem 1rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff9e66;}
 .post-btn2 {float:left;}
+
 
 .main-wrap .add-h3 {float:left;}
 .main-wrap .choice-gray {color: gray;}
