--- a/03.KHdaangn/src/main/webapp/resources/css/common.css
+++ b/03.KHdaangn/src/main/webapp/resources/css/common.css
@@ -15,17 +15,23 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 
 /* header */
 .header-wrap {width: 100%; position: fixed; top: 0; z-index: 999; background-color: #FFFFFF}
-.nav{display: flex; justify-content: center; width: 100%; margin: 1rem auto; padding: 0.6rem; text-align: center;}
-.nav .nav-logo > a {width: 115px; height: 38px; display: flex; align-items: center;}
-.nav .nav-logo a > img {width: 38px; height: 38px; display: block;}
-.nav .nav-main {width: 600px;}
+.nav{display: flex; justify-content: center; width: 100%; margin: 1rem auto; padding: 0.6rem; text-align: center; align-items: center;}
+.nav .nav-logo > a {width: 140px; height: 38px; margin-right: 15px; display: flex; align-items: center; text-decoration: none; color: #ff6f0f; font-size: 2rem; font-weight: 800;}
+.nav .nav-logo a > img {width: 38px; height: 38px; display: block; transform: translateY(-2px);}
+.nav .nav-main {width: 480px;}
 .nav .nav-main > ul {margin: 10px; display: flex; list-style: none;}
 .nav .nav-main > li {display: list-item;}
-.nav .nav-main li > a {margin-right: 15px;}
+.nav .nav-main li > a {margin-right: 30px; text-decoration: none; color: #000; font-size: 2rem; font-weight: 700;}
+.nav .nav-main li > a:hover {color: #868b94;}
+/* 페이지 이동시 li 태그 색상 변경 이벤트 JS로 구현 해야함*/
+/* .nav .nav-main li > a:active {color: #ff6f0f;} */
 .nav .search-bar {display: flex;}
-.nav .search-bar > input {width: 30rem;}
-.nav .nav-btn {width: 135px; display: flex;}
-
+.nav .search-bar > input {width: 30rem; height: 4.2rem; padding: 9px 12px; border: none; border-radius: 4px; font-size: 1.5rem; color: #212124; background-color: #f2f3f6;}
+.nav .nav-btn {width: 165px; padding: 0.7rem; display: flex; justify-content: space-evenly;}
+.nav .nav-btn .btn-chat {cursor: pointer; padding: 10px 10px; border: 1px solid #d1d3d8; border-radius: 2px; font-size: 1.5rem; font-weight: 700; background-color: #fff;}
+.nav .nav-btn .btn-chat:hover {color: #212124; background-color: #f2f3f6;}
+.nav .nav-btn .btn-login {cursor: pointer; padding: 10px 10px; border: 1px solid #d1d3d8; border-radius: 2px; font-size: 1.5rem; font-weight: 700; background-color: #fff;}
+.nav .nav-btn .btn-login:hover {color: #212124; background-color: #f2f3f6;}
 
 /* footer */
 .footer-wrap {border-top: 1px solid; border-color: #eaebee; max-width: 1600px; text-align: center; line-height: 1.7;}
