--- a/03.KHdaangn/src/main/webapp/resources/css/common.css
+++ b/03.KHdaangn/src/main/webapp/resources/css/common.css
@@ -99,13 +99,41 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .karrot-app .app-mid {margin: 3rem 24rem 3rem 0; font-size: 2rem; font-weight: 700;}
 .karrot-app .app-right {padding: 1rem 1rem; margin-right: 1rem; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 10px; background-color: #ff6f0f;}
 
- 
+
 /* posts */
 .posts .posts-img > img {display: block; width: 80px; height: 80px; float: left; }
 .post-btn {float:right; margin-top: 2.2rem;}
 .post-btn > button {cursor: pointer; padding: 0.7rem 1rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff6f0f;}
 .post-btn > button:hover {cursor: pointer; padding: 0.7rem 1rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff9e66;}
 .post-btn2 {float:left;}
+
+.post-wrap {width: 780px; margin: 0 auto;}
+.post-wrap h1 {font-size: 2.5rem; font-weight: 800;}
+.post-wrap h2 {padding: 1rem 0;}
+
+.post-wrap .slide-img > img {width: 100%; text-align: center;}
+
+.post-wrap .id-section {margin: 2rem 0; display: flex; justify-content: space-between;}
+.post-wrap .id-section .id-section-left > h2 {padding: 0; font-weight: 800;}
+
+.post-wrap .title {margin: 3rem 0; display: flex; justify-content: space-between;}
+.post-wrap .title .title-name {color: gray; float: left;}
+.post-wrap .title .title-name:after {content: ' · ';}
+.post-wrap .title .title-date {color: gray;}
+
+.post-wrap .info {margin-bottom: 5rem;}
+.post-wrap .info .info-content {font-size: 1.7rem;}
+.post-wrap .info .info-content:before {margin-right: 0.8rem; content: "0";}
+
+.post-wrap .detail {margin-bottom: 5rem;}
+.post-wrap .detail .detail-content {font-size: 1.7rem;}
+
+.post-wrap .address {margin-bottom: 5rem;}
+.post-wrap .address .naver-map .map-api {text-align: center;}
+.post-wrap .address .address-detail {font-size: 1.7rem;}
+
+.post-modifyBtn > button {cursor: pointer; padding: 1.3rem 1.8rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff6f0f;}
+.post-modifyBtn > button:hover {cursor: pointer; padding: 1.3rem 1.8rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff9e66;}
 
 
 .main-wrap .add-h3 {float:left;}
