--- a/03.KHdaangn/src/main/webapp/resources/css/common.css
+++ b/03.KHdaangn/src/main/webapp/resources/css/common.css
@@ -55,31 +55,43 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .footer-wrap .footer-info .footer-select {margin-left: 0.3rem;}
 
 /* index */
-.main-wrap {margin: 8.8rem auto 0; align-items: center;}
-.main-wrap .main-title {width: 980px; margin: 0 auto;}
-.main-wrap .main-title > h1 {font-size: 34px; font-weight: 800; text-align: center; margin-bottom: 40px;}
-.main-wrap .main-content:first-child {position: relative; display: flex; padding-top: 24px; background-color: #FBF7F2;}
-.main-wrap .main-content:nth-child(2) {display: flex; padding: 6rem 0;}
-.main-wrap .main-content:nth-child(3) {display: flex; padding: 6rem 0; background-color: #E6F3E6;}
-.main-wrap .main-content:nth-child(4) {display: flex; padding: 6rem 0;}
+.main-wrap {margin: 8.8rem auto 0;}
+.main-wrap .main-content:first-child {position: relative; display: flex; justify-content: center; padding-top: 2.4rem; background-color: #FBF7F2;}
+.main-wrap .main-content:nth-child(2) {padding: 6rem 0; display: flex; justify-content: center;}
+.main-wrap .main-content:nth-child(3) {padding: 6rem 0; display: flex; justify-content: center; background-color: #E6F3E6;}
+.main-wrap .main-content:nth-child(4) {padding: 6rem 0; display: flex; justify-content: center;}
 
-.main-content .text-section {margin: 150px 0;}
-.main-content .main-title {width: 350px; font-weight: 900; font-size: 40px;}
-.main-content .img-section {width: 40%;}
-.main-content .main-img > img {width: 100%; height: 100%;}
+.main-wrap .main-content .text-section {margin: 18rem 0 25rem 10rem;}
+.main-wrap .main-content .text-section .main-title {width: 35rem; margin-bottom: 2rem; font-weight: 900; font-size: 5rem;}
+.main-wrap .main-content .text-section .main-detail {font-size: 1.6rem;}
+.main-wrap .main-content .img-section {width: 50%;}
+.main-wrap .main-content .img-section2 {width: 40%;}
+.main-wrap .main-content .main-img > img {width: 100%; height: 100%;}
 
-.main-wrap .second-content {background-color: #F8F9FA; text-align: center;}
-.main-wrap .third-content {display: flex; justify-content: center; margin: 40px auto; text-align: center;}
-.main-wrap .third-content > ul {display: flex; margin: 0 3rem; text-align: center; list-style: none;}
+.main-wrap .main-content .text-section .list-section {width: 50rem; display: flex; list-style: none;}
+.main-wrap .main-content .text-section .list-section .main-list {width: 25%; margin: 5rem 2rem 0 0;}
+
+.main-wrap .second-content {padding-bottom: 15rem; background-color: #F8F9FA; text-align: center;}
+.main-wrap .second-content .main-top {margin: 0 auto; padding-top: 4rem;}
+.main-wrap .second-content > a {font-size: 1.7rem; font-weight: 700; color: black;}
+
+.main-wrap .third-content {width:780px; margin: 5rem auto 7rem; text-align: center;}
+.main-wrap .third-content > a {font-size: 1.7rem; font-weight: 700; color: black;}
+.main-wrap .third-content > ul {margin-top: 2rem; display: flex; justify-content: space-around; list-style: none;}
+.main-wrap .third-content .keyword {text-decoration: none; color: black;}
+.main-wrap .third-content .keyword:hover {text-decoration: underline;}
 
 .main-wrap .main-jobs {text-align: center; background-color: #ff6f0f;}
 
+.main-wrap .main-content button {margin: 3rem 0.8rem; padding: 1.45rem 2.6rem; border: none; border-radius: 6px; font-size: 1.8rem; font-weight: 700; color: #212529; background-color: #F1F3F5;}
 
 /* hot_articles */
+.main-wrap .main-top {width: 980px; margin: 0 auto;}
+.main-wrap .main-top > h1 {font-size: 34px; font-weight: 800; text-align: center; margin-bottom: 40px;}
 .main-wrap .article-top {width: 980px; margin: 1rem auto; display: flex; justify-content: space-between; align-items: center;}
 .main-wrap .selector {float: right; display: flex;}
 
-.article-wrap .article-posts {width: 980px; margin: 0 auto; display: flex; justify-content: space-between; flex-wrap: wrap;}
+.article-wrap .article-posts {width: 980px; margin: 0 auto; display: flex; justify-content: space-between; flex-wrap: wrap; text-align: left;}
 .article-wrap .article-posts .post {width: calc(25% - 44px); margin-right: 44px; margin-bottom: 56px; cursor: pointer;}
 .article-wrap .article-posts .post .article-click .article-img {width: 100%; border-radius: 12px;}
 
