--- a/03.KHdaangn/src/main/webapp/resources/css/common.css
+++ b/03.KHdaangn/src/main/webapp/resources/css/common.css
@@ -78,7 +78,7 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .main-wrap .third-content {width:780px; margin: 5rem auto 7rem; text-align: center;}
 .main-wrap .third-content > a {font-size: 1.7rem; font-weight: 700; color: black;}
 .main-wrap .third-content > ul {margin-top: 2rem; display: flex; justify-content: space-around; list-style: none;}
-.main-wrap .third-content .keyword {text-decoration: none; color: black;}
+.main-wrap .third-content .keyword {text-decoration: none; color: black; font-size: 1.6rem;}
 .main-wrap .third-content .keyword:hover {text-decoration: underline;}
 
 .main-wrap .main-jobs {text-align: center; background-color: #ff6f0f;}
@@ -88,15 +88,32 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 /* hot_articles */
 .main-wrap .main-top {width: 980px; margin: 0 auto;}
 .main-wrap .main-top > h1 {font-size: 34px; font-weight: 800; text-align: center; margin-bottom: 40px;}
-.main-wrap .article-top {width: 980px; margin: 1rem auto; display: flex; justify-content: space-between; align-items: center;}
-.main-wrap .selector {float: right; display: flex;}
+
+.main-wrap .article-top {width: 980px; margin: 1rem auto 3rem; display: flex; justify-content: space-between; align-items: center;}
+.main-wrap .article-top .post-btn2 {float:left; margin-left: 1rem;}
+.main-wrap .article-top .post-btn2 > button {cursor: pointer; padding: 0.7rem 1rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff6f0f;}
+.main-wrap .article-top .post-btn2 > button:hover {cursor: pointer; padding: 0.7rem 1rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff9e66;}
+
+.main-wrap .article-top .selector {margin-right: 5rem; display: flex;}
+.main-wrap .article-top .selector .selector1 > select {width: 20rem; padding: 1.2rem 1.6rem; font-size: 1.7rem; border: solid 1px #e9ecef;}
+.main-wrap .article-top .selector .selector2 > select {width: 20rem; padding: 1.2rem 1.6rem; font-size: 1.7rem; border: solid 1px #e9ecef;}
 
 .article-wrap .article-posts {width: 980px; margin: 0 auto; display: flex; justify-content: space-between; flex-wrap: wrap; text-align: left;}
 .article-wrap .article-posts .post {width: calc(25% - 44px); margin-right: 44px; margin-bottom: 56px; cursor: pointer;}
 .article-wrap .article-posts .post .article-click .article-img {width: 100%; border-radius: 12px;}
+.article-wrap .article-posts .post .article-click .article-content .article-title {margin: 1.5rem 0 0.7rem; font-size: 1.8rem;}
+.article-wrap .article-posts .post .article-click .article-content .article-amount {margin-bottom: 0.7rem; font-size: 1.8rem; font-weight: 800;}
+.article-wrap .article-posts .post .article-click .article-content .article-address {margin-bottom: 0.4rem; font-size: 1.6rem;}
+.article-wrap .article-posts .post .article-click .article-content .article-like {margin-bottom: 0.4rem; color: gray; font-size: 1.6rem; float: left;}
+.article-wrap .article-posts .post .article-click .article-content .article-like:after {content: " ·"}
+.article-wrap .article-posts .post .article-click .article-content .article-chat {color: gray; font-size: 1.6rem;}
 
-.article-bottom {padding: 80px 0; text-align: center; background-color: #f8f9fa;} 
- 
+.article-bottom {padding: 7rem 0; text-align: center; background-color: #f8f9fa;} 
+.article-bottom > h2 {padding-bottom: 4rem; font-size: 2.6rem; font-weight: 700;} 
+.article-bottom > p {padding-bottom: 1.9rem; font-size: 1.6rem;} 
+.article-bottom > button {cursor: pointer; padding: 1.3rem 2.1rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff6f0f;}
+.article-bottom > button:hover {cursor: pointer; padding: 1.3rem 2.1rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff9e66;}
+
  
 /* jobs & realty */
 .main-top-wrap {height: 30rem; background: #ffe2d2;}
@@ -114,6 +131,7 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .post-wrap .posts .post {width: calc(25% - 44px); margin-right: 220px; margin-bottom: 56px; cursor: pointer;}
 .post-wrap .posts .post .post-click {display: flex;}
 .post-wrap .posts .post .post-click .post-img {width: 100%; border-radius: 12px;}
+/* .post-wrap .posts .post .post-click .post-content .post-title {font-size: 1.4rem;} */
 
 .karrot-app {cursor: pointer; width: 770px; margin: 0 auto; display: flex; align-items: center; border-radius: 10px; background-color: #ff6f0f24}
 .karrot-app .app-left > img {width: 5.5rem; margin: 0 4rem;}
@@ -126,7 +144,7 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .post-btn {float:right; margin-top: 2.2rem;}
 .post-btn > button {cursor: pointer; padding: 0.7rem 1rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff6f0f;}
 .post-btn > button:hover {cursor: pointer; padding: 0.7rem 1rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff9e66;}
-.post-btn2 {float:left;}
+
 
 .post-wrap {width: 780px; margin: 0 auto;}
 .post-wrap h1 {font-size: 2.5rem; font-weight: 800;}
