--- a/03.KHdaangn/src/main/webapp/resources/css/common.css
+++ b/03.KHdaangn/src/main/webapp/resources/css/common.css
@@ -86,7 +86,7 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .main-wrap .main-content button {margin: 3rem 0.8rem; padding: 1.45rem 2.6rem; border: none; border-radius: 6px; font-size: 1.8rem; font-weight: 700; color: #212529; background-color: #F1F3F5;}
 
 /* hot_articles */
-.main-wrap .main-top {width: 980px; margin: 0 auto;}
+.main-wrap .main-top {width: 780px; margin: 0 auto;}
 .main-wrap .main-top > h1 {font-size: 34px; font-weight: 800; text-align: center; margin-bottom: 40px;}
 
 .main-wrap .article-top {width: 980px; margin: 1rem auto 3rem; display: flex; justify-content: space-between; align-items: center;}
@@ -115,10 +115,11 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .article-bottom > button:hover {cursor: pointer; padding: 1.3rem 2.1rem; border: none; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 6px; background-color: #ff9e66;}
 
  
+ 
 /* jobs & realty */
 .main-top-wrap {height: 30rem; background: #ffe2d2;}
 .main-top-wrap .main-top {width: 980px; display: flex;}
-.main-top-wrap .main-top .main-text {width: 700px; margin: 0 auto; padding: 5rem 1rem 0;}
+.main-top-wrap .main-top .main-text {width: 790px; margin: 0 auto; padding: 5rem 1rem 0;}
 .main-top-wrap .main-top .main-text > h1 {font-size: 34px; font-weight: 800; margin-bottom: 15px;}
 .main-top-wrap .main-top .main-text > p {font-size: 18px;}
 .main-top-wrap .main-top .main-img > img {width: 567px; position: absolute; transform: translateX(-525px) translateY(55px);}
@@ -128,16 +129,26 @@ address, table, thead, tbody, tfoot, tr, td, caption {margin: 0; padding: 0;}
 .main-wrap .post-wrap .post-top-wrap > h2 {font-size: 2.8rem; margin: 3.75rem 54rem 2.5rem 0;}
 
 /* posts에서 공유해서 쓰기 때문에 앞에 상속관계 쓰지 않음 */
-.posts {width: 780px; margin: 0 auto; display: flex; justify-content: space-between; flex-wrap: wrap;}
-.posts .post {width: calc(25% - 44px); margin-right: 220px; margin-bottom: 56px; cursor: pointer;}
+.posts {width: 780px; margin: 0 auto 2rem; display: flex; justify-content: space-between; flex-wrap: wrap;}
+.posts .post {width: 48%; margin-bottom: 4rem; cursor: pointer;}
 .posts .post .post-click {display: flex;}
-.posts .post .post-click .post-img {width: 100%; border-radius: 12px;}
-/* .post-wrap .posts .post .post-click .post-content .post-title {font-size: 1.4rem;} */
+.posts .post .post-click .post-img {width: 35%; margin-right: 1rem; border-radius: 12px;}
+.post-wrap .posts .post .post-click .post-content .post-title {margin: 1.5rem 0 0.7rem; font-size: 1.8rem;}
+.post-wrap .posts .post .post-click .post-content .post-id {margin-bottom: 0.4rem; color: gray; font-size: 1.6rem; float: left;}
+.post-wrap .posts .post .post-click .post-content .post-id:after {content: " ·"}
+.post-wrap .posts .post .post-click .post-content .post-address {margin-bottom: 0.4rem; color: gray; font-size: 1.6rem;}
+.post-wrap .posts .post .post-click .post-content .post-amount {margin-bottom: 0.7rem; font-size: 1.8rem; font-weight: 800;}
+
+article-wrap .article-posts .post .article-click .article-content .article-like {margin-bottom: 0.4rem; color: gray; font-size: 1.6rem; float: left;}
+.article-wrap .article-posts .post .article-click .article-content .article-like:after {content: " ·"}
+.article-wrap .article-posts .post .article-click .article-content .article-chat {color: gray; font-size: 1.6rem;}
+
 
 .karrot-app {cursor: pointer; width: 770px; margin: 0 auto; display: flex; align-items: center; border-radius: 10px; background-color: #ff6f0f24}
 .karrot-app .app-left > img {width: 5.5rem; margin: 0 4rem;}
 .karrot-app .app-mid {margin: 3rem 24rem 3rem 0; font-size: 2rem; font-weight: 700;}
 .karrot-app .app-right {padding: 1rem 1rem; margin-right: 1rem; color: #fff; font-size: 1.5rem; font-weight: 700; border-radius: 10px; background-color: #ff6f0f;}
+
 
 
 /* posts */
